Mobile menu bugs when show after scrolled down - Fixed issue with with mobile menu not showing all items when scrolled down and the opening menu. - Fix for ie bug on resize when mobile menu open - TODO: make a better solution for solving these two things...

--- a/src/components/main-navigation/style.less
+++ b/src/components/main-navigation/style.less
@@ -267,6 +267,9 @@
         overflow-y: auto;
         -ms-overflow-style: auto;
       }
+      .more {
+        display: none !important;
+      }
     }
   }
 
